syntax = "proto3";
option java_multiple_files = true;
package org.example.demo;

message CardRequest {
    int32 regMonth = 1;
    int32 regYear = 2;
    int32 cvc = 3;
    string cardNum = 4;
    string ownerId = 5;
}

message CardResponse {
    string id = 1;
    int32 expMonth = 2;
    int32 expYear = 3;
    int32 cvc = 4;
    string cardNum = 5;
    string ownerId = 6;
    int32 balance = 7;
}

message GetOneRequest {
    string id = 1;
}

message GetAllResponse {
    repeated CardResponse card = 1;
}

message GetAllRequest {
    string dummyRequest = 1;
}

message ReplenishRequest {
    string id = 1;
    int32 balance = 2;
}

message WithdrawRequest {
    string id = 1;
    int32 balance = 2;
}

message OperationResponse {
    CardResponse card = 1;
}

message CloseResponse {
    string response = 1;
}

service CardService {
  rpc getAll (GetAllRequest) returns (GetAllResponse);
  rpc get (GetOneRequest) returns (CardResponse);
  rpc create(CardRequest) returns (CardResponse);
  rpc replenish(ReplenishRequest) returns (OperationResponse);
  rpc withdraw(WithdrawRequest) returns (OperationResponse);
  rpc close(GetOneRequest) returns (CloseResponse);
}